Bug 89061 - row/column sizes are ignored
Summary: row/column sizes are ignored
Status: RESOLVED FIXED
Alias: None
Product: Document Liberation Project
Classification: Unclassified
Component: libmspub (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86 (IA32) Windows (All)
: medium critical
Assignee: David Tardon
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-02 21:08 UTC by gjrjsj
Modified: 2017-10-30 11:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
MS Pub file using formatted tables (128.00 KB, application/vnd.ms-publisher)
2015-02-02 21:08 UTC, gjrjsj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gjrjsj 2015-02-02 21:08:57 UTC
Created attachment 113068 [details]
MS Pub file using formatted tables

MS Publisher file import contains tables. Latest fix now retrieves data (text) but row/column sizes are incorrect (totally out of format)