tdf#89061 parse table row/column sizes

Change-Id: I5471eac69e89eec51018572ff3b541e6953c43be